--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
+    "@types/chart.js": "^2.9.37",
+    "@types/react-chartjs-2": "^2.5.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "jest": "^29.5.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
