--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@types/chart.js": "^2.9.37",
     "@types/react-chartjs-2": "^2.5.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "^6.11.2",
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
     "@types/jest": "^29.5.1",
